--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -51,7 +51,7 @@
 {% block content %} {% endblock %}
 
 
-<div id="footer">Map created by Livia Jakob | 2018
+<div id="footer">App created by Livia Jakob | 2018
 </div>
 
 </body>
