--- a/data_sharing/static/css/map.css
+++ b/data_sharing/static/css/map.css
@@ -411,6 +411,7 @@ input[type="range"]::-moz-range-thumb {
     margin-top: -2px;
     margin-bottom: 0px;
     margin-left: 5px;
+    margin-right: 17px;
 }
 
 .download:hover{
@@ -423,3 +424,35 @@ input[type="range"]::-moz-range-thumb {
 	margin-left: 15px;
 	position: relative;
 }
+
+
+.layer-outer{
+	background-color: rgba(255,255,255,0.4);
+	margin-bottom: 7px;
+	padding: 4px;
+	border-radius: 4px;
+	border: 1px solid lightgrey;
+	
+}
+
+.collapse-title{
+	background-color: rgba(255,255,255,0.4);
+	//border-radius: 4px;
+	cursor: pointer;
+	margin: -4px;
+	padding: 4px;
+	padding-left: 7px;
+	padding-bottom: 3px;
+}
+
+.collapse-button{
+	float: right;
+	border-radius: 50%;
+	cursor: pointer;
+	margin-top: -3px;
+}
+
+input{
+	cursor: pointer;
+}
+
