--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -12,9 +12,10 @@
     
     <!-- Timerangeslider before Bootstrap to not overwrite the styles-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<script src="{{url_for('static', filename='js/jQRangeSlider-5.7.2/jQDateRangeSlider-min.js')}}"></script>
 	<link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-	<link rel="stylesheet" type=text/css href="{{url_for('static', filename='js/jQRangeSlider-5.7.2/css/iThing.css')}}">
+	<script src="{{url_for('static', filename='js/External-JS/jQDateRangeSlider-min.js')}}"></script>
+
+	<link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/jQRangeSlider/5.7.2/css/iThing.min.css">
 	
 	
   <!-- Bootstrap --> 
