--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -3,14 +3,14 @@
 
 
 
-    <script src="{{url_for('static', filename='js/proj4.js')}}"></script>
+    <script src="{{url_for('static', filename='js/External-JS/proj4.js')}}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/4.6.5/ol.css" type="text/css">
 	
 	<!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/4.6.5/ol.js"></script>
 
-	<script src="{{url_for('static', filename='js/ol-layerswitcher.js')}}"></script>
+	<script src="{{url_for('static', filename='js/External-JS/ol-layerswitcher.js')}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
 	
 	<!-- Chart -->
