tidy and added more documentation

--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -4,17 +4,17 @@
   <title>Data Sharing Platform</title>
     <meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<title>IceExplorer</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favi.ico') }}" type="image/x-icon">
     
     
 
-    <script src="{{url_for('static', filename='js/jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='js/External-JS/jquery.js')}}"></script>
     
     <!-- Timerangeslider before Bootstrap to not overwrite the styles-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
 	<script src="{{url_for('static', filename='js/External-JS/jQDateRangeSlider-min.js')}}"></script>
-
 	<link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/jQRangeSlider/5.7.2/css/iThing.min.css">
 	
 	
@@ -22,9 +22,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 	
+	<!-- Custom CSS -->
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+	
+	<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">	
+
 
 {% block head %}{% endblock %}
 </head>
