--- a/data_sharing/static/css/style.css
+++ b/data_sharing/static/css/style.css
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 p b{
-	color: rgb(62, 41, 40);
+	//color: rgb(62, 41, 40);
 }
 
 body{
@@ -80,7 +80,7 @@ a{
 #datasets-content{
 	position:relative;
 	width: 100%;
-    height: 320px;
+    height: 400px;
     overflow-y: scroll;
     //background-color: darkgrey;
     padding: 5px;
@@ -102,7 +102,7 @@ a{
     border-radius: 5px;
     padding: 5px;
     margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 0px;
     direction:ltr;
     background-color: darkgrey;
 }
@@ -381,6 +381,11 @@ select:hover{
 
 #filterDatasets:hover{
 	opacity: 0.7;
+}
+
+
+.upper{
+	text-transform: uppercase;
 }
 
 
