--- a/data_sharing/templates/about.html
+++ b/data_sharing/templates/about.html
@@ -15,12 +15,98 @@ consortium <a href="https://cryotop-evolution.org/">CryoTop Evolution</a>.</p>
 <h1>API</h1>
 <hr class="head">
 
-<p>Data can be queried directly via the API.</p>
-<h3>Query datasets (JSON format):</h3>
-<p>Input Parameter:</p>
+<p>Data can be queried directly via the API. Two different endpoints are available; 
+(1) Query available datasets and layers and (2) query data files. See the descriptions below to find out more about how to use the two endpoints.</p>
 
-<h3>Query data file:</h3>
+<br>
+<h3>Query available datasets:</h3>
+<p><b>Endpoint URL: </b>{{root}}/v1/datasets <br>
+<b>Example: </b>{{root}}/v1/datasets?layertype=dem&startdate=2011-09-21</p>
 <p>Input Parameter:</p>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Parameter</th>
+        <th>Required?</th>
+        <th>Type</th>
+        <th>Default</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>layertype</td>
+        <td>no</td>
+        <td>string</td>
+        <td></td>
+        <td>Type of data. Use one of the following: dem, error, velocity, rate</td>
+      </tr>
+      <tr>
+        <td>startdate</td>
+        <td>no</td>
+        <td>string</td>
+        <td></td>
+        <td>Filters only datasets with layers after this date. Format: 'YYYY-MM-DD' (e.g. 2013-11-21)</td>
+      </tr>
+      <tr>
+        <td>enddate</td>
+        <td>no</td>
+        <td>string</td>
+        <td></td>
+        <td>Filters only datasets with layers before this date. Format: 'YYYY-MM-DD' (e.g. 2013-11-21)</td>
+      </tr>
+      <tr>
+        <td>id</td>
+        <td>no</td>
+        <td>integer</td>
+        <td></td>
+        <td>Dataset id</td>
+      </tr>
+      <tr>
+        <td>protocol</td>
+        <td>no</td>
+        <td>string</td>
+        <td>json</td>
+        <td>Response type. Use one of the following: json, xml</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  <br>
+  
+<h3>Query data file:</h3>
+<p><b>Endpoint URL: </b>{{root}}/v1/file <br>
+<b>Example: </b>{{root}}/v1/file?layer_id=1&date=2017-06-26</p>
+<p>Input Parameter:</p>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Parameter</th>
+        <th>Required?</th>
+        <th>Type</th>
+        <th>Default</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>layer_id</td>
+        <td>yes</td>
+        <td>integer</td>
+        <td></td>
+        <td>Layer id</td>
+      </tr>
+      <tr>
+        <td>date</td>
+        <td>yes</td>
+        <td>string</td>
+        <td></td>
+        <td>Date of the layer in the following format: 'YYYY-MM-DD' (e.g. 2013-11-21)</td>
+      </tr>
+    </tbody>
+  </table>
+<br>
+
 
 <h1>Projectpartner</h1>
 <hr class="head">
