--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/4.6.5/ol.js"></script>
 
+
 	<script src="{{url_for('static', filename='js/External-JS/ol-layerswitcher.js')}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
 	
@@ -34,9 +35,9 @@
 <div id=side>
     <div id="side-content">
     
-    <div class="text" style="background-color: lightsteelblue; border-radius: 7px;">
+    <!-- div class="text" style="background-color: lightsteelblue; border-radius: 7px;">
     <p>Welcome to the IceExplorer</p>   
-    </div>
+    </div-->
     <div id="datasets">
     <div id=datasets-bar>
     Datasets   
@@ -155,6 +156,7 @@
 <script src="{{url_for('static', filename='js/export.js')}}"></script>
 <script src="{{url_for('static', filename='js/swipe.js')}}"></script>
 <script src="{{url_for('static', filename='js/explore.js')}}"></script>
+<script src="{{url_for('static', filename='js/legend.js')}}"></script>
 
 {% endblock %}
 
