--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -102,7 +102,7 @@
 	   	<hr>
 	   	
 	   	<button id="toggle-swipe" data-toggle="tooltip" data-placement="right" title="Enter swipe mode to compare the two top layers">Swipe Tool</button>
-	   	<button id="toggle-explore" data-toggle="tooltip" data-placement="right" title="Enter get values mode to explore layer values">Get Values Tool</button>
+	   	<button id="toggle-explore" data-toggle="tooltip" data-placement="right" title="Enter get values mode to explore layer values over time">Get Values Tool</button>
 	   	
 	   	<div style="padding-top: 65px">
 	   	<hr>
