--- a/data_sharing/static/css/ol-layerswitcher.css
+++ b/data_sharing/static/css/ol-layerswitcher.css
@@ -1,3 +1,11 @@
+/* Style for background layerswitcher
+ * Filename: ol-layerswitcher.css
+ * 
+ * Author: Matt Walker (https://github.com/walkermatt/ol-layerswitcher)
+ * Adapted by: Livia Jakob
+ * */
+
+
 .layer-switcher.shown.ol-control {
     background-color: transparent;
 }
