--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/4.6.5/ol.js"></script>
 
-
 	<script src="{{url_for('static', filename='js/External-JS/ol-layerswitcher.js')}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
 	
@@ -76,9 +75,6 @@
         <div id="scroll-icon">&#8597;</div>
     </div>
 
-	<div class="text"><button id="png">Download view as PNG</button>
-	</div>
-
 	<div class="text" style="padding-top: 15px;">
 	<h5 style="margin-left: -4px;">Project supported by</h5>
 	<hr style="margin-left: -4px;  margin-bottom: 7px;" class="head">
@@ -130,6 +126,16 @@
 	</div>
 
 </div> <!-- End of fullscreen -->
+
+
+<script type="text/javascript">
+/* Read to configuration jinja parameters */
+var api_link = '{{ api_location }}';
+var root_link = '{{ tiles_weblocation}}'
+var projection = '{{projection}}';
+var mapcenter = {{map_centre}};
+
+</script>
 
  <script src="{{url_for('static', filename='js/mapstyles.js')}}"></script>
  <script src="{{url_for('static', filename='js/map.js')}}"></script>
