minor fix in layer file retrievement

--- a/data_sharing/static/css/style.css
+++ b/data_sharing/static/css/style.css
@@ -79,6 +79,16 @@ a{
 	float: left;
 }
 
+
+#side-content {
+    -ms-overflow-style: none;  // IE 10+
+    overflow: -moz-scrollbars-none;  // Firefox
+}
+#side-content::-webkit-scrollbar { 
+    display: none;  // Safari and Chrome
+}
+
+
 #attribution{
 	position:relative;
 }
