fixed bug in prepare raster

--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -45,7 +45,7 @@
     
     	<div class="semi-small" id="timerange-outer">
     	    	<input data-toggle="collapse" checked data-target="#timerange" data-placement="bottom" id="bytime" type="checkbox" name="filterbytime" value="Time"> Filter by Time
-    	    	<span class="info-button" data-toggle="tooltip" data-placement="top" title="Filters datasets covering the entered timespan. Smaller timespans will give more results."></span>
+    	    	<span class="info-button" data-toggle="tooltip" data-placement="top" title="Filters datasets within the queried timespan. Larger timespans will give more results."></span>
     	        	<div class="collapse show" id="timerange"></div>	
     	    	
     	    	</div>
